--- a/index.html
+++ b/index.html
@@ -4,53 +4,53 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Ramadan Fasting Times – Lowell/Groton</title>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;600&display=swap" rel="stylesheet">
 <style>
+  @import url('https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&family=DM+Sans:wght@400;500;600&display=swap');
+
   *, *::before, *::after { margin: 0; padding: 0; box-sizing: border-box; }
 
   html, body {
     background: transparent;
-    font-family: 'DM Sans', 'Segoe UI', system-ui, sans-serif;
-    color: #fff;
+    font-family: 'DM Sans', sans-serif;
+    color: #e8e6df;
     height: 100%;
   }
 
   .widget {
-    background: rgba(18, 18, 24, 0.72);
-    backdrop-filter: blur(16px);
-    -webkit-backdrop-filter: blur(16px);
-    border: 1px solid rgba(255, 255, 255, 0.08);
+    background: linear-gradient(135deg, rgba(10, 22, 40, 0.92), rgba(18, 38, 65, 0.88));
+    border: 1px solid rgba(120, 160, 210, 0.15);
     border-radius: 14px;
-    padding: 14px 20px 12px;
+    padding: 16px 20px 14px;
     max-width: 520px;
     margin: 0 auto;
+    backdrop-filter: blur(12px);
+    box-shadow: 0 4px 24px rgba(0,0,0,0.35);
   }
 
-  /* Header row: title left, day badge right */
+  /* Header */
   .header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-bottom: 10px;
+    margin-bottom: 12px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid rgba(120, 160, 210, 0.12);
   }
 
   .title {
-    font-size: 12px;
-    font-weight: 500;
-    letter-spacing: 1.5px;
-    text-transform: uppercase;
-    color: rgba(255, 255, 255, 0.45);
+    font-family: 'Amiri', serif;
+    font-size: 18px;
+    font-weight: 700;
+    color: #d4c9a8;
+    letter-spacing: 0.5px;
   }
 
   .day-badge {
     font-size: 11px;
     font-weight: 600;
-    letter-spacing: 0.5px;
-    color: rgba(255, 255, 255, 0.85);
-    background: rgba(255, 255, 255, 0.08);
-    padding: 3px 10px;
-    border-radius: 20px;
+    letter-spacing: 1.2px;
+    text-transform: uppercase;
+    color: rgba(200, 200, 210, 0.6);
   }
 
   /* Table */
@@ -64,55 +64,56 @@
     font-weight: 500;
     text-transform: uppercase;
     letter-spacing: 1px;
-    color: rgba(255, 255, 255, 0.35);
-    padding: 0 6px 6px;
+    color: rgba(200, 200, 210, 0.4);
+    padding: 0 6px 7px;
     text-align: center;
   }
 
   td {
-    font-size: 20px;
+    font-size: 19px;
     font-weight: 600;
     text-align: center;
-    padding: 4px 6px 2px;
-    color: #fff;
+    padding: 5px 6px 2px;
+    color: #e8e6df;
     letter-spacing: -0.3px;
+    font-variant-numeric: tabular-nums;
   }
 
-  /* Highlight Sahur & Iftar columns */
-  td.key-time {
-    color: #e8c97a;
-  }
+  /* Highlight Sahur & Iftar */
+  th.key-col { color: rgba(212, 201, 168, 0.55); }
+  td.key-time { color: #d4c9a8; }
 
-  /* Subtle dividers between columns */
+  /* Subtle dividers */
   td + td, th + th {
-    border-left: 1px solid rgba(255, 255, 255, 0.06);
+    border-left: 1px solid rgba(120, 160, 210, 0.07);
   }
 
-  /* Pre-Ramadan / Post-Ramadan message */
+  /* Pre/post Ramadan message */
   .message {
     text-align: center;
-    font-size: 14px;
+    padding: 4px 0 2px;
+  }
+
+  .message .main-text {
+    font-size: 15px;
     font-weight: 500;
-    color: rgba(255, 255, 255, 0.7);
-    padding: 4px 0;
+    color: rgba(220, 220, 225, 0.85);
   }
 
   .message .date-note {
-    font-size: 11px;
-    color: rgba(255, 255, 255, 0.35);
+    font-size: 12px;
+    color: rgba(200, 200, 210, 0.45);
     margin-top: 4px;
+    font-weight: 500;
   }
 </style>
 </head>
 <body>
-<div class="widget" id="widget">
-  <!-- Populated by JS -->
-</div>
+<div class="widget" id="widget"></div>
 
 <script>
   // ── Ramadan 2026 fasting times for Lowell/Groton, MA ──
-  // Format: [month, day, sahur, sunrise, sunset, iftar]
-  // Times are strings in "H:MM AM/PM" format
+  // [month, day, ramadanDay, sahur, sunrise, sunset, iftar]
   const RAMADAN_DATA = [
     [2,18, 1, "5:19 AM","6:37 AM","5:21 PM","5:22 PM"],
     [2,19, 2, "5:18 AM","6:36 AM","5:22 PM","5:23 PM"],
@@ -146,19 +147,27 @@
     [3,19,30, "5:34 AM","6:50 AM","6:56 PM","6:56 PM"],
   ];
 
+  // ╔═══════════════════════════════════════════════════╗
+  // ║  SET TO true TO PREVIEW, false FOR PRODUCTION     ║
+  // ╚═══════════════════════════════════════════════════╝
+  const PREVIEW_MODE = true;
+
   function render() {
     const now = new Date();
-    const m = now.getMonth() + 1; // 1-indexed
+    const m = now.getMonth() + 1;
     const d = now.getDate();
     const widget = document.getElementById('widget');
 
-    // Find today's entry
-    const today = RAMADAN_DATA.find(r => r[0] === m && r[1] === d);
+    let today = RAMADAN_DATA.find(r => r[0] === m && r[1] === d);
+
+    // Preview: show Day 1 if no match for today
+    if (PREVIEW_MODE && !today) {
+      today = RAMADAN_DATA[0];
+    }
 
     if (!today) {
-      // Before or after Ramadan
-      const startDate = new Date(2026, 1, 18); // Feb 18
-      const endDate   = new Date(2026, 2, 20); // Mar 20
+      const startDate = new Date(2026, 1, 18);
+      const endDate   = new Date(2026, 2, 20);
 
       if (now < startDate) {
         const diff = Math.ceil((startDate - now) / 86400000);
@@ -167,7 +176,7 @@
             <span class="title">Ramadan 1447h</span>
           </div>
           <div class="message">
-            Begins in ${diff} day${diff !== 1 ? 's' : ''}
+            <div class="main-text">Begins in ${diff} day${diff !== 1 ? 's' : ''}</div>
             <div class="date-note">Wednesday, February 18</div>
           </div>`;
       } else {
@@ -176,7 +185,7 @@
             <span class="title">Ramadan 1447h</span>
           </div>
           <div class="message">
-            Ramadan Mubarak ☪
+            <div class="main-text">Ramadan Mubarak</div>
             <div class="date-note">Eid al-Fitr begins March 20</div>
           </div>`;
       }
@@ -188,13 +197,13 @@
     widget.innerHTML = `
       <div class="header">
         <span class="title">Ramadan 1447h</span>
-        <span class="day-badge">Day ${day}</span>
+        <span class="day-badge">Day ${day} of 30</span>
       </div>
       <table>
         <tr>
-          <th>Sahur</th>
+          <th class="key-col">Sahur</th>
           <th>Sunrise</th>
-          <th>Iftar</th>
+          <th class="key-col">Iftar</th>
           <th>Sunset</th>
         </tr>
         <tr>
